# sw4-account-creator

./: .dockerignore  Cargo.toml  Dockerfile  README.md
assets/css/: style.min.css  style.min.css.map
assets/scss/: _colors.scss  style.scss
src/: create_account.rs  main.rs
src/contract_helper/: account_activity.rs  account_by_public_key.rs  account_create.rs  account_likely_nfts.rs  account_likely_tokens.rs  mod.rs
src/utils/: block_hash.rs  mod.rs  nonce.rs
templates/: form_fail.html.tera  form_success.html.tera  index.html.tera
