[package]
name = "sw4-account-creator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "*"
actix-rt = "*"
actix-web = "4.4.1"
actix-files = "0.6.0"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
near-account-id = "1.0.0"
near-crypto = "0.20.1"
near-jsonrpc-client = "0.8.0"
near-jsonrpc-primitives = "*"
near-primitives = "0.20.1"
near-primitives-core = "0.20.1"
tera = "1.19.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"