[package]
name = "sw4-account-creator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6.0"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
dotenv = "0.15.0"
near-account-id = "1.0.0"
near-crypto = "0.20.1"
near-jsonrpc-client = "0.8.0"
near-jsonrpc-primitives = "*"
near-primitives = "0.20.1"
near-primitives-core = "0.20.1"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tera = "1.19.1"
tracing = "0.1.28"
tracing-subscriber = "0.2.16"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

actix-cors = "0.7.0"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }

# [features]
# contract-helper = []
